examples/test/testpolicy7996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7996
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value15
          key3: value27
      podSelector:
        matchLabels:
          key6: value30
          key2: value11
          key28: value6
